@startuml

title __SENSOR's Class Diagram__\n

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    class de.tuberlin.dima.bdapro.dataIntegration.sensor.Field {
        - LOG : Logger
        {static} - TIMESTAMP_FORMAT_STR : String
        - clazz : Class<?>
        - isFeature : boolean
        - name : String
        - value : Object
        + Field()
        + getName()
        + getTypeInformation()
        + getValue()
        + isFeature()
        + setValue()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    class de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingCsvInputFormat {
        {static} - CHARSET_NAME : String
        {static} - serialVersionUID : long
        + SensorReadingCsvInputFormat()
        + acceptFile()
        + open()
        + readRecord()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    class de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingFormatter {
        + SensorReadingFormatter()
        + format()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    class de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingParser {
        {static} - DELIMITER : String
        - LOG : Logger
        - fields : List<Field>
        + SensorReadingParser()
        + readRecord()
        {static} - getCommonSensorFieldNames()
        {static} - getSensorFieldNames()
        {static} - getSensorFields()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    enum Type {
      BME280
      BMP180
      DHT22
      DS18B20
      HPM
      HTU21D
      PMS3003
      PMS5003
      PMS7003
      PPD42NS
      SDS011
      UNIFIED
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    class de.tuberlin.dima.bdapro.dataIntegration.sensor.UnifiedSensorReading {
        {static} + AGGREGATION_FIELDS : String[]
        + altitude : Double
        + durP1 : Double
        + durP2 : Double
        + humidity : Double
        + lat : Double
        + location : Integer
        + lon : Double
        + p0 : Double
        + p1 : Double
        + p2 : Double
        + pressure : Double
        + pressure_sealevel : Double
        + ratioP1 : Double
        + ratioP2 : Double
        + sensorId : Integer
        + sensorType : String
        + temperature : Double
        + timestamp : Timestamp
        + equals()
        {static} + getFieldMap()
        {static} + getFields()
        + hashCode()
        + toString()
        + toTuple()
        - commonFieldsToString()
    }
  }
  

  de.tuberlin.dima.bdapro.dataIntegration.sensor.Field .up.|> java.io.Serializable
  de.tuberlin.dima.bdapro.dataIntegration.sensor.Field -up-|> de.tuberlin.dima.bdapro.advancedProcessing.featureTable.Column
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingCsvInputFormat -up-|> org.apache.flink.api.common.io.DelimitedInputFormat
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingCsvInputFormat o-- de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingParser : parser
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingFormatter .up.|> org.apache.flink.api.java.io.TextOutputFormat.TextFormatter
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingFormatter o-- de.tuberlin.dima.bdapro.dataIntegration.sensor.Type : sensorType
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingParser .up.|> java.io.Serializable
  de.tuberlin.dima.bdapro.dataIntegration.sensor.SensorReadingParser o-- de.tuberlin.dima.bdapro.dataIntegration.sensor.Type : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
